--- a/osmosfeed.yaml
+++ b/osmosfeed.yaml
@@ -104,6 +104,7 @@ sources:
   - href: https://ruiji.hatenablog.jp/rss
   - href: https://saize-lw.hatenablog.com/rss
   - href: https://satoru-takeuchi.hatenablog.com/rss
+  - href: https://scopes.hateblo.jp/rss
   - href: https://senotic.hatenablog.com/rss
   - href: https://sevensheets.hatenablog.com/rss
   - href: https://shima1296.hatenablog.com/rss
