--- a/osmosfeed.yaml
+++ b/osmosfeed.yaml
@@ -257,6 +257,7 @@ sources:
   # others
   - href: https://5h4ru.com/rss.xml
   - href: https://baku89.com/feed
+  - href: https://blog.3qe.us/rss
   - href: https://blog.jxck.io/feeds/atom.xml
   - href: https://blog.sakamo.dev/index.xml
   - href: https://blog.wesleyac.com/feed.xml
