--- a/osmosfeed.yaml
+++ b/osmosfeed.yaml
@@ -259,6 +259,7 @@ sources:
   - href: https://baku89.com/feed
   - href: https://blog.3qe.us/rss
   - href: https://blog.jxck.io/feeds/atom.xml
+  - href: https://blog.lai.so/rss/
   - href: https://blog.sakamo.dev/index.xml
   - href: https://blog.wesleyac.com/feed.xml
   - href: https://blog.ojisan.io/rss.xml
