--- a/osmosfeed.yaml
+++ b/osmosfeed.yaml
@@ -13,6 +13,7 @@ sources:
   - href: https://anacondatan.hatenablog.com/rss
   - href: https://anadekamen.hatenablog.com/rss
   - href: https://arakur65536.hatenablog.com/rss
+  - href: https://arimuri.hatenablog.com/rss
   - href: https://atarabi.hateblo.jp/rss
   - href: https://aun6june.hatenablog.com/rss
   - href: https://ayukake.hatenablog.com/rss
@@ -100,6 +101,7 @@ sources:
   - href: https://pirohiko.hatenablog.com/rss
   - href: https://quarz-y-s.hatenadiary.com/rss
   - href: https://rhysd.hatenablog.com/rss
+  - href: https://rinsuki.hatenablog.jp/rss
   - href: https://rokkan2235500.hatenablog.com/rss
   - href: https://ruiji.hatenablog.jp/rss
   - href: https://saize-lw.hatenablog.com/rss
