--- a/osmosfeed.yaml
+++ b/osmosfeed.yaml
@@ -83,6 +83,7 @@ sources:
   - href: https://na77a.hatenablog.com/rss
   - href: https://nasupiman.hatenablog.com/rss
   - href: https://nazenaninadesico.hatenablog.jp/rss
+  - href: https://neon.hatenadiary.com/rss
   - href: https://niewalsound.hatenablog.com/rss
   - href: https://nightvalley.hatenablog.com/rss
   - href: https://niryuu.hatenablog.com/rss
