--- a/osmosfeed.yaml
+++ b/osmosfeed.yaml
@@ -39,6 +39,7 @@ sources:
   - href: https://fumimaker.net/rss
   - href: https://gfx.hatenablog.com/rss
   - href: https://gyuhii.hatenablog.com/rss
+  - href: https://hadkimi.hatenablog.com/rss
   - href: https://hardshopper.hatenablog.com/rss
   - href: https://hercelot.hatenablog.com/rss
   - href: https://hikido.hatenablog.com/rss
